// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders correctly 1`] = `
<label
  className="cssClass[label] cssClass[nonempty]"
  data-tx="10.0.0"
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <input
    className="cssClass[radio]"
    onBlur={[Function]}
    onFocus={[Function]}
    type="radio"
  />
  <span
    className="cssClass[radioIcon]"
  />
  Sample Text
</label>
`;

exports[`Radio renders disabled state correctly 1`] = `
<label
  className="cssClass[label] cssClass[disabled] cssClass[nonempty]"
  data-tx="10.0.0"
  onClick={[Function]}
  onMouseDown={[Function]}
>
  <input
    className="cssClass[radio]"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    type="radio"
  />
  <span
    className="cssClass[radioIcon]"
  />
  Sample Text
</label>
`;
